# substrate-module-oracle

./: Cargo.toml  README.md
ci/: install_rust.sh
client/: Cargo.toml
client/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  oracle.rs
runtime/wasm/: Cargo.toml  build.sh
runtime/wasm/src/: lib.rs
src/: chain_spec.rs  main.rs  service.rs  test.rs
