[package]
name = "oracle-client"
version = "0.1.0"
authors = ["sadsnake <sadsnake@mixbytes.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand            = "*"
env_logger      = { version = "0.7", optional = true }
ws              = { version = "0.7", optional = true }
hex             = { version = "0.4", default-features=false, optional = true }
log             = { version = "0.4", optional = true }
serde           = { version = "1.0", optional = true, features = ["derive"] }
serde_json      = { version = "1.0", optional = true }
primitive-types = { version = "0.6", default-features = false, features = ["codec"] }

[dependencies.keyring]
git = "https://github.com/paritytech/substrate"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"
package = "substrate-keyring"

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dependencies.substrate-api-client]
git = "https://github.com/scs/substrate-api-client"
rev = "5a825ff965bbae4ac0967ac23ede25c50ce66487"

[dependencies.codec]
package = "parity-scale-codec"
features = ["derive"]
version = "1.0.0"
default-features = false

[dependencies.system]
git = "https://github.com/paritytech/substrate"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"
package = "palette-system"
default-features=false

[dependencies.balances]
git = "https://github.com/paritytech/substrate"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"
package = "pallet-balances"
default-features=false

[dependencies.runtime_version]
git = "https://github.com/paritytech/substrate"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"
package = "sr-version"
default-features=false

[dependencies.metadata]
git = "https://github.com/paritytech/substrate"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"
package = "palette-metadata"
default-features=false

[dependencies.runtime_io]
git = "https://github.com/paritytech/substrate"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"
package = "sr-io"
default-features=false

[dependencies.indices]
git = "https://github.com/paritytech/substrate"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"
package = "pallet-indices"
default-features=false

[dependencies.runtime_primitives]
git = "https://github.com/paritytech/substrate"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"
package = "sr-primitives"
default-features=false

[dependencies.runtime_support]
git = "https://github.com/paritytech/substrate"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"
package = "palette-support"
default-features=false


[dependencies.rstd]
git = "https://github.com/paritytech/substrate"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"
package = "sr-std"
default-features = false

[dev-dependencies]
wabt = "0.9.0"


[features]
default = ["std"]
std = [
    "primitives/std",
    "codec/std",
    "runtime_primitives/std",
    "runtime_support/std",
    "runtime_primitives/std",
    "system/std",
    "balances/std",
    "runtime_version/std",
    "metadata/std",
    "runtime_io/std",
    "indices/std",
    "primitives/std",
    "serde/std",
    "serde_json",
    "env_logger",
    "log",
    "ws",
    "hex",
]
full_crypto = []
