[package]
authors = ['sadsnake <sadsnake@mixbytes.io>']
edition = '2018'
name = 'oracle-node-runtime-wasm'
version = '1.0.0'
[dependencies.oracle-node-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['oracle-node-runtime/std']

[workspace]
members = []

[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'
